--- a/config.json
+++ b/config.json
@@ -55,17 +55,82 @@
     "app_secrect": "c88cd4d7-1c6b-44d9-8041-293b38efb7b3",
     "url": "https://sandbox.hscloud.cn/gildatahk/v1/financialnotes/hk_mainincomestru",
     "non_compliant_keywords": [
-        "网络广告",
         "财富管理及个人银行业务",
         "商业银行业务",
         "环球银行及资本市场业务",
+        "英式酒馆业务",
+        "公司金融业务",
+        "个人金融业务",
+        "资金业务",
+        "保险",
         "澳门威尼斯人",
         "金沙城中心",
         "澳门巴黎人",
         "澳门百利宫",
         "澳门金沙",
-        "分部间收益"
+        "寿险及健康险",
+        "财产保险",
+        "银行",
+        "信托",
+        "证券",
+        "其他资产管理",
+        "抵销",
+        "个人银行",
+        "企业银行",
+        "财资业务",
+        "保险业务",
+        "寿险",
+        "健康险",
+        "意外险",
+        "金融业",
+        "博彩及娱乐",
+        "生鲜猪肉",
+        "生猪养殖",
+        "股本证券及金融衍生产品",
+        "金融科技及企业服务",
+        "公司银行业务",
+        "个人银行业务"
     ],
-    "questionable_keywords": ["其它","未分配"],
-    "not_applicable": ["合计","小计"]
+    "questionable_keywords": [
+        "其它",
+        "未分配",
+        "对销",
+        "其他业务",
+        "酒店经营",
+        "酒店及服务套房业务",
+        "其他",
+        "酒店业务",
+        "酒店营运",
+        "地产-酒店",
+        "航空-其他",
+        "饮料-中国内地",
+        "饮料-香港",
+        "饮料-台湾",
+        "饮料-美国",
+        "饮料-中央成本",
+        "贸易及实业-太古食品",
+        "贸易及实业-中央成本",
+        "贸易及实业-其他业务",
+        "酒店",
+        "投资及其它",
+        "其他收入-其他",
+        "合併抵销",
+        "分部间抵销",
+        "肉制品",
+        "其他分部",
+        "抵销分部间销售",
+        "现货",
+        "商品",
+        "交易后业务",
+        "所有其他活动",
+        "增值服务",
+        "网络广告",
+        "公司",
+        "数字媒体及娱乐",
+        "未分摊"
+    ],
+    "not_applicable": [
+        "合计",
+        "小计"
+    ]
 }
